# Downstream-Processing-Simulator

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
cad/: README.md
cad/cfd/: README.md  zones_schema.md
cad/output/: beaker_100mm.step  beaker_100mm.stl  jacketed_vessel_92mm.step  jacketed_vessel_92mm.stl  stirrer_A_pitched_blade.step  stirrer_A_pitched_blade.stl  stirrer_B_rotor.step  stirrer_B_rotor.stl  stirrer_B_stator.step  stirrer_B_stator.stl
cad/scripts/: build_geometry.py
data/validation/: README.md
data/wetlab_calibration_examples/: Q-013_chitosan_kernel_calibration.yaml  Q-014_v9_2_profile_validation.yaml
docs/: 01_scientific_advisor_report.md  02_computational_architecture.md  03_architecture_modification_plan.md  04_calibration_protocol.md  19_ligand_protein_coupling_candidates.md  20_linker_arm_candidates.md  DPS_CLEAN_SLATE_ARCHITECTURE.md  INDEX.md  architect_coherence_audit.md  audit_report_2026-05-10.md  configuration.md  current_support_matrix.md  dev_orchestrator_plan.md  development_plan_from_audit_2026-05-10.md  f1a_alginate_protocol.md  f1b_cellulose_nips_protocol.md  f1c_plga_protocol.md  f2_digital_twin_protocol.md  f4b_cvar_protocol.md  f5_md_ingest_protocol.md  functional_architecture_audit_2026-05-04.md  joint_audit_v0_6_3_2026-05-04.md  joint_update_plan.md  module2_history.md  p5_plus_plus_protocol.md  performance_recipe_protocol.md  quickstart.md  ui_audit_2026-05-11.md  ui_evolution.md  ui_optimization_implementation_plan_2026-05-11.md  update_workplan_2026-05-04.md  update_workplan_2026-05-10_m3_pressure.md  update_workplan_2026-05-10_v0_8.md  update_workplan_2026-05-10_v0_8_1.md  update_workplan_2026-05-10_v0_8_2.md  update_workplan_2026-05-10_v0_8_3.md  update_workplan_2026-05-10_v0_8_4.md  update_workplan_2026-05-10_v0_8_5.md  update_workplan_2026-05-10_v0_9_0.md
installer/: DPSim.iss  LICENSE_AND_IP.txt  README.md  build_installer.bat  substitute_version.py
tests/: conftest.py  test_alginate_ionic_ca.py  test_alginate_l4_and_pipeline.py  test_alginate_phase2c.py  test_assay_record.py  test_assay_templates.py  test_batch_variability.py  test_c6_isotherm_posterior.py  test_calibration_quality_gates.py  test_calibration_tier_promotion.py  test_cellulose_nips_phase1.py  test_cellulose_phase2_phase3.py  test_cfd_extract_epsilon.py  test_cfd_validation_gates.py  test_cfd_zonal_pbe.py  test_cfd_zonal_pbe_regime_guards.py  test_cli_v7.py  test_cooling_rate_derivation.py  test_crosslinker_derivation.py  test_data_layer.py  test_digital_twin.py  test_dsd_bin_resolved.py  test_dsd_njobs_parallelism.py  test_edc_nhs_kinetics.py  test_evidence_tier.py  test_f4b_cvar.py  test_family_reagent_matrix.py  test_gradient_elution_fmc_inheritance.py  test_gradient_lrm.py  test_internal_gelation.py  test_inverse_design_engine.py  test_inverse_design_objectives.py  test_ion_registry.py  test_kernels_jit.py  test_l1_trends.py  test_level1_emulsification.py  test_level2_gelation.py  test_level3_crosslinking.py  test_level4_mechanical.py  test_lifecycle_runners.py  (+75 more)
(+516 files in other folders)
