[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "downstream-processing-simulator"
version = "0.5.2"
description = "Lifecycle simulation of double-emulsification microsphere fabrication, functional ligand crosslinking, and affinity chromatography performance"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "h5py>=3.10",
    "matplotlib>=3.8",
    "pydantic>=2.5",
]

[project.optional-dependencies]
# Pinned 2026-04-19 per ADR-002 (M4 v9.1.0). Verified runtime stack: torch
# 2.11.0+cpu / botorch 0.17.2 / gpytorch 1.15.2 on Py 3.12. Allow patch updates
# only; minor bumps require re-verifying FastNondominatedPartitioning duck-typing.
optimization = ["botorch~=0.17.2", "gpytorch~=1.15.2", "torch~=2.11.0"]
interactive = ["plotly>=5.18", "jupyter"]
ui = ["streamlit>=1.30", "plotly>=5.18"]
dev = ["pytest>=7.4", "pytest-timeout>=2.3", "hypothesis>=6.90", "rich>=13.0", "numba>=0.59"]
# v0.3.1 (G4): optional Bayesian posterior fitting for the MC-LRM driver.
# pymc + arviz are heavy (~700 MB combined). The base install never imports
# them; bayesian_fit.fit_langmuir_posterior raises PymcNotInstalledError
# with the install command when called without this extra.
bayesian = ["pymc>=5.0", "arviz>=0.17"]
all = ["downstream-processing-simulator[optimization,interactive,dev,ui,bayesian]"]

[project.scripts]
dpsim = "dpsim.__main__:main"
downstream-processing-simulator = "dpsim.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --timeout=120"
markers = [
    "smoke: minimum-viable end-to-end pipeline run via configs/fast_smoke.toml; must finish under 30s",
    "slow: tests that take >5s individually (CH 2D solver, Hypothesis property tests, full optimisation)",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# Streamlit reload pattern requires importlib.reload after path setup; the
# semicolon-style multi-statement imports are deliberate and documented in
# CLAUDE.md (Streamlit re-mints the datatypes enum on every rerun).
"src/dpsim/visualization/app.py" = ["E402", "E702", "F811"]
"src/dpsim/visualization/pages/*.py" = ["E402"]
"src/dpsim/visualization/tabs/tab_m1.py" = ["E402"]
# config.py imports datatypes after configuring the module logger (intentional).
"src/dpsim/config.py" = ["E402"]
# plots_m2.py: `make_subplots` is imported for an optional codepath; ruff suggests
# importlib.util.find_spec but that adds runtime cost for a static check.
"src/dpsim/visualization/plots_m2.py" = ["F401"]
